--- a/Ma_Fiche.html
+++ b/Ma_Fiche.html
@@ -8,30 +8,40 @@
       <script src="/script.js"></script>
     </head>
     <body>
-
-       <header>Barthes Lucie - Promo 1</header>
+       <header class="header-def">
+         <nav>
+           <span>Barthes Lucie</span>
+             <ul class="navbar-default">
+               <li><a href="#lien-moi">Moi</a></li>
+                <li><a href="#lien-Bio">Biographie</a></li>
+                 <li><a href="#lien-Objectif">Objectif</a></li>
+                  <li><a href="#lien-Projets">Projets</a></li>
+                   <li><a href="#lien-Contact">Contact</a></li>
+               </ul>
+         </nav>
+      </header>
        <img src="http://gununu.nipah.co.uk/_images/fe4bb19cdbc2188db9aeeeeab4dad3ca/ergo_proxy%20pino.jpg"
     <section class="bg-light-gray">
-         <h1 id="text-decoration">À propos de moi</h1>
+         <h1 id="lien-moi">À propos de moi</h1>
          <label>Nom : </label>Barthes<br>
          <label>Prénom : </label>Lucie<br>
          <label>Ville : </label>Mende<br>
          <label>Age : </label>22 ans<br>
-         <label>Compte Github : </label><a href=https://github.com/Dameluccia>Dameluccia</a><br>
+         <label>Compte Github : </label><a class="lienvert"href=https://github.com/Dameluccia>Dameluccia</a><br>
      </section>
 
      <section>
-       <h2>Biographie</h2>
+       <h2 id="lien-Bio">Biographie</h2>
        <p>Beaucoup d'expériences diverses</p>
      </section>
 
      <section class="bg-light-gray">
-       <h2>Objectifs après Codi n Camp</h2>
+       <h2 id="lien-Objectif">Objectifs après Codi n Camp</h2>
        <p>Devenir développeuse web et codeuse de jeux vidéos</p>
      </section>
 
      <section>
-       <h2>Projets</h2>
+       <h2 id="lien-Projets">Projets</h2>
        <h4>Réalisés</h4>
      <ul>
 
@@ -51,6 +61,10 @@
           <li>Jeux vidéos</li>
           <li>Animés</li>
        </ul>
+     </section>
+
+     <section>
+       <h2 id="lien-Contact">Contact</h2>
      </section>
 
      <footer> © - Còdi n Camp - 2015 - CC BY SA-NC</footer>
