--- a/Ma_Fiche.html
+++ b/Ma_Fiche.html
@@ -7,8 +7,9 @@
       <link rel="stylesheet" href="style.css">
       <script src="/script.js"></script>
     </head>
+
     <body>
-       <header class="header-def">
+       <header>
          <nav>
            <span>Barthes Lucie</span>
              <ul class="navbar-default">
@@ -20,6 +21,7 @@
                </ul>
          </nav>
       </header>
+
        <img src="http://gununu.nipah.co.uk/_images/fe4bb19cdbc2188db9aeeeeab4dad3ca/ergo_proxy%20pino.jpg"
     <section class="bg-light-gray">
          <h1 id="lien-moi">À propos de moi</h1>
@@ -42,13 +44,14 @@
 
      <section>
        <h2 id="lien-Projets">Projets</h2>
-       <h4>Réalisés</h4>
-     <ul>
 
+       <h4>Réalisés</h4>
+
+     <ul>
            <li>Apprentissage de lignes de commandes</li>
            <li>Apprentissage HTML/CSS</li>
-
      </ul>
+
        <h4>En cours</h4>
      <ul>
            <li> Cv en ligne </li>
