--- a/Ma_Fiche.html
+++ b/Ma_Fiche.html
@@ -22,7 +22,7 @@
          </nav>
       </header>
 
-       <img src="http://gununu.nipah.co.uk/_images/fe4bb19cdbc2188db9aeeeeab4dad3ca/ergo_proxy%20pino.jpg"
+       <img id="photo" src="http://gununu.nipah.co.uk/_images/fe4bb19cdbc2188db9aeeeeab4dad3ca/ergo_proxy%20pino.jpg"
     <section class="bg-light-gray">
          <h1 id="lien-moi">À propos de moi</h1>
          <label>Nom : </label>Barthes<br>
