--- a/Lbarthes.html
+++ b/Lbarthes.html
@@ -22,53 +22,75 @@
          </nav>
       </header>
 
-       <img id="photo" src="http://gununu.nipah.co.uk/_images/fe4bb19cdbc2188db9aeeeeab4dad3ca/ergo_proxy%20pino.jpg"
-    <section class="bg-light-gray">
-         <h1 id="lien-moi">À propos de moi</h1>
+
+<section class="bg-light-gray">
+   <div class="center presentation">
+
+    <div class="image">
+           <img src="https://placehold.it/150x200">
+    </div>
+      <div class="apropo">
+        <h1 id="lien-moi">À propos de moi</h1>
          <label>Nom : </label>Barthes<br>
          <label>Prénom : </label>Lucie<br>
          <label>Ville : </label>Mende<br>
          <label>Age : </label>22 ans<br>
          <label>Compte Github : </label><a class="lienvert"href=https://github.com/Dameluccia>Dameluccia</a><br>
-     </section>
+      </div>
+    </div>
+</section>
 
-     <section>
+<section>
+     <div class="center">
        <h2 id="lien-Bio">Biographie</h2>
        <p>Beaucoup d'expériences diverses</p>
-     </section>
+      </div>
+</section>
 
-     <section class="bg-light-gray">
+<section class="bg-light-gray">
+    <div class="center">
        <h2 id="lien-Objectif">Objectifs après Codi n Camp</h2>
        <p>Devenir développeuse web et codeuse de jeux vidéos</p>
-     </section>
+    </div>
+</section>
 
-     <section>
-       <h2 id="lien-Projets">Projets</h2>
+<section>
 
-       <h4>Réalisés</h4>
+  <div class="center presentation section3">
 
-     <ul>
+        <h2 id="lien-Projets">Projets</h2>
+        <div class="projets">
+        <h4>Réalisés</h4>
+     <ul class="section3">
            <li>Apprentissage de lignes de commandes</li>
            <li>Apprentissage HTML/CSS</li>
      </ul>
-
+   </div>
+   <div class="encours section3">
        <h4>En cours</h4>
-     <ul>
-           <li> Cv en ligne </li>
+     <ul class="section3">
+     <li>Cv en ligne</li>
      </ul>
-     </section>
+   </div>
+ </div>
 
-     <section class="bg-light-gray">
+ </section>
+
+<section class="bg-light-gray">
+        <div class="center">
        <h2>Loisirs</h2>
        <ul>
           <li>Jeux vidéos</li>
           <li>Animés</li>
        </ul>
-     </section>
+     </div>
+</section>
 
-     <section>
+<section>
+        <div class="center">
        <h2 id="lien-Contact">Contact</h2>
-     </section>
+     </div>
+</section>
 
      <footer> © - Còdi n Camp - 2015 - CC BY SA-NC</footer>
     </body>
