--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -1,80 +1,84 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
-  <meta charset="utf-8">
-  <title>Barthes Lucie | Còdi n Camp - Promo 1</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="/script.js"></script>
- <title></title>
-</head>
+  <head>
+      <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
+      <meta charset="utf-8">
+      <title>trombinoscope</title>
+      <link rel="stylesheet" href="style.css">
+   <script src="script.js"></script>
+  </head>
 
 <body>
-  <section class="trombisection">
-    <h2>Trombi</h2>
-<ul class="trombi">
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Alexis Girard</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Anne Delseny</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Christopher Poudevigne</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Damien Klementik</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Johan Ladine</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Leaticia Luciani</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Lucie Barthes</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Médéric Voisin</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Nadège Jahier</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Nicolas Jonis</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Pierre Sarrus</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Quentin Garrido</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Theo Martin</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Virgil Niati</a>
-  </li>
-  <li>
-    <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
-    <a href="#">Xavier Soulier</a>
-  </li>
-</ul>
-  </section>
+<section class="trombisection">
+
+<p id="pCpt">0</p>
+
+
+<h2>Trombi</h2>
+ <ul class="trombi">
+    <li>
+      <img onclick="afficherphoto(this)"
+           src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Alexis Girard</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Anne Delseny</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Christopher Poudevigne</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Damien Klementik</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Johan Ladine</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Leaticia Luciani</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="Lbarthes.html">Lucie Barthes</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Médéric Voisin</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Nadège Jahier</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Nicolas Jonis</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Pierre Sarrus</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Quentin Garrido</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Theo Martin</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Virgil Niati</a>
+    </li>
+    <li>
+      <img src="https://placeholdit.imgix.net/~text?txtsize=14&txt=150%C3%97150&w=150&h=150">
+      <a href="#">Xavier Soulier</a>
+    </li>
+ </ul>
+</section>
 <p>
 
 </p>
