--- a/Lbarthes.html
+++ b/Lbarthes.html
@@ -17,7 +17,7 @@
                 <li><a href="#lien-Bio">Biographie</a></li>
                  <li><a href="#lien-Objectif">Objectif</a></li>
                   <li><a href="#lien-Projets">Projets</a></li>
-                   <li><a href="#lien-Contact">Contact</a></li>
+                   <li><a href="contact.html">Contact</a></li>
                </ul>
          </nav>
       </header>
