--- a/Lbarthes.html
+++ b/Lbarthes.html
@@ -13,7 +13,7 @@
          <nav>
            <span>Barthes Lucie</span>
              <ul class="navbar-default">
-               <li><a href="#lien-moi">Moi</a></li>
+               <li><a href="Lbarthes.html">Moi</a></li>
                 <li><a href="#lien-Bio">Biographie</a></li>
                  <li><a href="#lien-Objectif">Objectif</a></li>
                   <li><a href="#lien-Projets">Projets</a></li>
