--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <html lang="fr">
     <head>
       <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css">
+     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
       <meta charset="utf-8">
       <title>Barthes Lucie | Còdi n Camp - Promo 1</title>
       <link rel="stylesheet" href="style.css">
@@ -13,7 +14,7 @@
          <nav>
            <span>Barthes Lucie</span>
              <ul class="navbar-default">
-               <li><a href="Lbarthes.html">Moi</a></li>
+               <li><a href="/trombi_promo1.html">Promo #1</a></li>
                 <li><a href="#lien-Bio">Biographie</a></li>
                  <li><a href="#lien-Objectif">Objectif</a></li>
                   <li><a href="#lien-Projets">Projets</a></li>
@@ -27,7 +28,7 @@
    <div class="center presentation">
 
     <div class="image">
-           <img src="https://placehold.it/150x200">
+           <img src="DSC_0034.JPG" class="imageprofil">
     </div>
       <div class="apropo">
         <h1 id="lien-moi">À propos de moi</h1>
@@ -94,15 +95,17 @@
 
 <div>
   <input type="hidden" name="to" value="kjlejf@lgjlg.com"/>
-  <label for="nom">Nom :</label>
+  <label for="nom"><i class="fa fa-user"> : </label></i>
   <input type="text" name="nom" id="nom" />
 </div>
 <div>
-  <label for="courriel">Courriel :</label>
+  <label for="courriel"><i class="fa fa-envelope-o"> : </label></i>
   <input type="email" name="from" id="courriel" />
 </div>
 <div>
-<label for="DateN"> Date de naissance </label>
+<label for="DateN"><i class="fa fa-calendar"> <i class="fa fa-birthday-cake">
+  :
+</label></i></i>
 <input type="date" name="dateN">
 </div>
 
