--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          <label>Prénom : </label>Lucie<br>
          <label>Ville : </label>Mende<br>
          <label>Age : </label>22 ans<br>
-         <label>Compte Github : </label><a class="lienvert"href=https://github.com/Dameluccia>Dameluccia</a><br>
+         <label><i class="fa fa-github"> : </label></i><a class="lienvert"href=https://github.com/Dameluccia> Dameluccia</a><br>
       </div>
     </div>
 </section>
@@ -44,14 +44,17 @@
 <section>
      <div class="center">
        <h2 id="lien-Bio">Biographie</h2>
-       <p>Beaucoup d'expériences diverses</p>
+       <p>Passionnée de jeux vidéos et d'univers vidéoludiques
+         je me suis lancée dans l'aventure Codi'n'Camp pour
+         travailler par la suite dans ce domaine. </p>
       </div>
 </section>
 
 <section class="bg-light-gray">
     <div class="center">
-       <h2 id="lien-Objectif">Objectifs après Codi n Camp</h2>
-       <p>Devenir développeuse web et codeuse de jeux vidéos</p>
+       <h2 class="sectionobjectif" id="lien-Objectif">Objectifs après Codi n Camp</h2>
+       <p>Mon objectif est de devenir développeuse web et codeuse de jeux vidéos
+          .</p>
     </div>
 </section>
 
@@ -64,13 +67,15 @@
         <h4>Réalisés</h4>
      <ul class="section3">
            <li>Apprentissage de lignes de commandes</li>
-           <li>Apprentissage HTML/CSS</li>
+           <li>Apprentissage HTML/CSS/JAVA.SCRIPT/PYTHON</li>
+
      </ul>
    </div>
    <div class="encours section3">
        <h4>En cours</h4>
      <ul class="section3">
-     <li>Cv en ligne</li>
+     <li>Fiche de présentation</li>
+     <li>Découverte de Scratch</li>
      </ul>
    </div>
  </div>
@@ -83,6 +88,7 @@
        <ul>
           <li>Jeux vidéos</li>
           <li>Animés</li>
+          <li>Gastronomie</li>
        </ul>
      </div>
 </section>
@@ -102,26 +108,14 @@
   <label for="courriel"><i class="fa fa-envelope-o"> : </label></i>
   <input type="email" name="from" id="courriel" />
 </div>
-<div>
-<label for="DateN"><i class="fa fa-calendar"> <i class="fa fa-birthday-cake">
-  :
-</label></i></i>
-<input type="date" name="dateN">
-</div>
-
-<div>
-<br><label for="sex"> Sexe : </label></br>
-<span style="color:#FF69B4"><input type="radio" name="sex"> Fille</span>
-<span style="color:#48D1CC"><input type="radio" name="sex"> Garçon</span>
-</div>
 
 
-<div>
-<label for="message">Message :</label>
 
+<div class="messageenvoyer">
+<label for="message"><i class="fa fa-pencil-square-o"> : </label></i>
 <textarea id="message" name="body"></textarea>
+<button type="submit" class="button"><i class="fa fa-paper-plane-o"></button></i>
 
-<button type="submit">Envoyer</button>
 </div>
 </form>
 
